Add number of questions to settings

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -16,4 +16,13 @@
       <item>8</item>
    </string-array>
 
+   <string-array name="num_questions_list">
+      <item>1</item>
+      <item>2</item>
+      <item>5</item>
+      <item>10</item>
+      <item>20</item>
+      <item>50</item>
+   </string-array>
+
 </resources>
