--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -14,17 +14,6 @@
                android:background="@drawable/fern_darkest">
 
    <TextView
-       android:id="@+id/introHeadingTextView"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_gravity="center_horizontal"
-       android:layout_marginBottom="@dimen/spacing"
-       android:text="@string/intro_heading"
-       android:textAppearance="?android:attr/textAppearanceMedium"
-       android:textColor="@color/support_text_default"
-       android:textStyle="bold" />
-
-   <TextView
        android:id="@+id/introToptextTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
@@ -33,48 +22,38 @@
        android:text="@string/intro_toptext"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/support_text_default"
-       android:textStyle="bold" />
+       android:textSize="@dimen/description_text" />
 
-
-
-   <RelativeLayout
-       android:id="@+id/row5LinearLayout"
+   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:orientation="horizontal"
-       android:weightSum="1">
+       android:layout_gravity="fill_horizontal"
+       android:gravity="center"
+       android:orientation="horizontal" >
 
       <ImageButton
           android:id="@+id/startImageButton"
-          android:layout_width="186dp"
-          android:layout_height="98dp"
-          android:lines="2"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_gravity="bottom"
+          android:layout_weight="2"
           android:background="@android:color/transparent"
-          android:cropToPadding="false"
-          android:paddingLeft="10dp"
-          android:scaleType="fitXY"
+          android:contentDescription="@string/app_name"
+          android:paddingTop="5dp"
+          android:scaleType="fitEnd"
           android:src="@drawable/start_button"
-          android:onClick="startQuiz"
-          android:layout_marginStart="16dp"
-          android:layout_marginBottom="14dp"
-          android:layout_alignParentBottom="true"
-          android:layout_alignParentStart="true" />
+          android:onClick="startQuiz" />
 
       <ImageView
           android:id="@+id/helpImageView"
-          android:layout_width="183dp"
-          android:layout_height="247dp"
-          android:layout_gravity="right"
-          android:layout_weight="4.47"
-          android:adjustViewBounds="true"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_gravity="top|left"
+          android:layout_weight="1"
           android:background="@android:color/transparent"
-          android:lines="2"
-          android:scaleType="fitXY"
-          android:src="@drawable/penguin"
-          android:layout_marginEnd="60dp"
-          android:layout_alignParentBottom="true"
-          android:layout_alignParentEnd="true" />
+          android:contentDescription="@string/app_name"
+          android:paddingTop="5dp"
+          android:src="@drawable/penguin" />
 
-
-   </RelativeLayout>
+   </LinearLayout>
 </LinearLayout>
