--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
    <dimen name="fab_margin">16dp</dimen>
    <dimen name="spacing">8dp</dimen>
    <dimen name="answer_size">26dp</dimen>
+    <dimen name="description_text">16dp</dimen>
 </resources>
