--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,6 +22,7 @@
        android:text="@string/question"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/quiz_text_default"
+       android:textSize="@dimen/instructional_text_size"
        android:textStyle="bold" />
 
    <ImageView
@@ -46,6 +47,7 @@
        android:text="@string/guess_species"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/quiz_text_default"
+       android:textSize="@dimen/instructional_text_size"
        android:textStyle="bold" />
 
    <LinearLayout
@@ -58,7 +60,8 @@
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:text="New Button"
-         android:id="@+id/button"
+          android:textSize="@dimen/button_text_size"
+          android:id="@+id/button"
          android:layout_weight="1"
          android:lines="2"
          style="@android:style/Widget.Material.Button.Colored"
@@ -68,7 +71,8 @@
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:text="New Button"
-         android:id="@+id/button2"
+          android:textSize="@dimen/button_text_size"
+          android:id="@+id/button2"
          android:layout_weight="1"
          android:lines="2"
          style="@android:style/Widget.Material.Button.Colored"
@@ -85,7 +89,8 @@
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:text="New Button"
-         android:id="@+id/button3"
+          android:textSize="@dimen/button_text_size"
+          android:id="@+id/button3"
          android:layout_weight="1"
          android:lines="2"
          style="@android:style/Widget.Material.Button.Colored"
@@ -95,7 +100,8 @@
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:text="New Button"
-         android:id="@+id/button4"
+          android:textSize="@dimen/button_text_size"
+          android:id="@+id/button4"
          android:layout_weight="1"
          android:lines="2"
          style="@android:style/Widget.Material.Button.Colored"
@@ -114,15 +120,17 @@
          android:text="New Button"
          android:id="@+id/button5"
          android:layout_weight="1"
+          android:textSize="@dimen/button_text_size"
          android:lines="2"
          style="@android:style/Widget.Material.Button.Colored"
-         android:textColor="@color/button_text_color"/>
+         android:textColor="@color/button_text_color" />
 
       <Button
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:text="New Button"
-         android:id="@+id/button6"
+          android:textSize="@dimen/button_text_size"
+          android:id="@+id/button6"
          android:layout_weight="1"
          android:lines="2"
          style="@android:style/Widget.Material.Button.Colored"
@@ -139,7 +147,8 @@
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:text="New Button"
-         android:id="@+id/button7"
+          android:textSize="@dimen/button_text_size"
+          android:id="@+id/button7"
          android:layout_weight="1"
          android:lines="2"
          style="@android:style/Widget.Material.Button.Colored"
@@ -149,11 +158,13 @@
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:text="New Button"
-         android:id="@+id/button8"
+          android:textSize="@dimen/button_text_size"
+          android:id="@+id/button8"
          android:layout_weight="1"
          android:lines="2"
          style="@android:style/Widget.Material.Button.Colored"
          android:textColor="@color/button_text_color"/>
+
    </LinearLayout>
 
    <LinearLayout
