--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-   <dimen name="fab_margin">16dp</dimen>
-   <dimen name="spacing">8dp</dimen>
-   <dimen name="answer_size">26dp</dimen>
-    <dimen name="description_text">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="spacing">8dp</dimen>
+    <dimen name="answer_size">24dp</dimen>
+    <dimen name="heading_text_size">16dp</dimen>
+    <dimen name="description_text_size">16dp</dimen>
+    <dimen name="instructional_text_size">18dp</dimen>
+    <dimen name="button_text_size">14dp</dimen>
 </resources>
